# libhangman

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  buildLinux.sh  buildOSX.sh  hangman.c  hangman.h  words
Debug/: hangman.d  makefile  subdir.mk
include/: hangman.h
libs/: libhangman.dylib
src/: hangman.c
